--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div>
         <h1 class= "text-align">Ozie's Resume</h1>
-        <img src = "./sample_profile_images/project_portfolio.jpg" id = profile_size>
+        <img src = "project_portfolio.jpg" id = profile_size>
        <hr/>
        </div>
        <div>
@@ -75,8 +75,8 @@
 
        <div>
         <h2>Contact Me</h2>
-        <a href = "https://www.instagram.com/ozie.wya/"><img src = "./social_media_logos/insta_logo.png" class = "logo-size"></a>
-        <a href = "https://www.linkedin.com/in/osvaldo-cruz-561aa2267/"><img src = "./social_media_logos/linkedin logo.png" class = "logo-size"></a>
+        <a href = "https://www.instagram.com/ozie.wya/"><img src = "insta_logo.png" class = "logo-size"></a>
+        <a href = "https://www.linkedin.com/in/osvaldo-cruz-561aa2267/"><img src = "linkedin logo.png" class = "logo-size"></a>
         <hr/>
         <h3>© Osvaldo Cruz - Salinas 2023</h3>
        </div>
